[package]
name = "texman"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
clap = { version = "4.5.34", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.7"
flate2 = "1.1.0"
futures = "0.3.31"
indicatif = "0.17.11"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tar = "0.4.44"
tokio = { version = "1.44.1", features = ["full"] }
xz2 = "0.1.7"
